# CashPilot-Desktop

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  app.go  app_test.go  codecov.yml  daemon.go  fleet_server.go  fleet_server_test.go  go.mod  go.sum  main.go  metrics.go  metrics_test.go  package-lock.json  package.json  tray_darwin.go  tray_other.go  wails.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-tag.yml  ci.yml  desktop-release.yml  stale.yml
docs/: ARCHITECTURE.md  BRANCH-2-RUNTIME.md  MARKET-FIT.md  NATIVE-SUPERVISION.md  REMOTE-DEPLOY-DESIGN.md  REMOTE-DEPLOY-TRANSPORT.md  SCREENSHOTS.md  SECURITY-NOTES.md  desktop-master-plan.md  edge-case-audit.md  managed-runtime.md  migration-inventory.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  style.css  vite-env.d.ts  wails.d.ts
internal/bgservice/: agent_darwin.go  agent_darwin_live_test.go  agent_linux.go  agent_unsupported.go  agent_windows.go  bgservice.go  parse.go  parse_test.go  render.go  render_test.go
internal/store/: store.go  (+1 more)
services/: _schema.yml
sidecar/: cashpilot-sidecar.spec  desktop_main.py  desktop_worker.py  requirements.txt
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  docker.rs  lib.rs  main.rs  sidecar.rs  tray.rs  window.rs
(+63 files in other folders)
