[package]
name = "cashpilot-desktop"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
which = "7"
dirs = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "cashpilot_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cashpilot-desktop"
path = "src/main.rs"
